fix: vercel build with node 18

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portiony",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "proxy": "https://port-0-portiony-backend-md4272k5c4648749.sel5.cloudtype.app/",
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
