--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,16 @@ build/
 
 # misc
 .DS_Store
+
+# 환경 변수
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# IDE
+.idea/
 
 npm-debug.log*
 yarn-debug.log*
